Copying rpm file to dev repo completed. Making a copy of volga repo to do end-to-end testing